--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -1,10 +1,10 @@
-.lead {
+.header {
   max-width: 984px;
   margin: 0 auto;
   padding: 56px 0 46px;
 }
 
-.lead__title {
+.header__title {
   width: 720px;
   font-family: "Inter";
   font-weight: 900;
@@ -13,7 +13,7 @@
   line-height: 100px;
   margin: 0 auto;
 }
-.lead__subtitle {
+.header__subtitle {
   width: 720px;
   font-family: "Inter";
   font-weight: 400;
@@ -23,34 +23,34 @@
   margin: 0 auto;
   padding: 32px 0 64px;
 }
-.lead__image {
+.header__image {
   width: 984px;
 }
 
 @media screen and (max-width: 1024px) {
-  .lead {
+  .header {
     width: 100%;
     padding-left: 0;
     padding-right: 0;
   }
-  .lead__title {
+  .header__title {
     width: 100%;
     font-size: 75px;
     line-height: 79px;
   }
-  .lead__subtitle {
+  .header__subtitle {
     width: 100%;
   }
-  .lead__image {
+  .header__image {
     width: 100%;
   }
 }
 @media screen and (max-width: 544px) {
-  .lead__title {
+  .header__title {
     font-size: 40px;
     line-height: 44px;
   }
-  .lead__subtitle {
+  .header__subtitle {
     font-size: 16px;
     line-height: 20px;
   }
