--- a/pages/index.css
+++ b/pages/index.css
@@ -6,8 +6,8 @@
 
 @import url("../blocks/logo.css");
 
-@import url("../blocks/lead.css");
+@import url("../blocks/header.css");
 
-@import url("../blocks/intro.css");
+@import url("../blocks/content.css");
 
 @import url("../blocks/footer.css");
