--- a/blocks/content.css
+++ b/blocks/content.css
@@ -10,14 +10,14 @@
   font-size: 54px;
   line-height: 58px;
 }
-.content__text_subtitle {
+.content__subtitle {
   width: 738px;
   font-family: "Inter";
   font-weight: 400;
   font-size: 24px;
   line-height: 34px;
 }
-.content__text_author {
+.content__author {
   width: 732px;
   font-family: "Inter";
   font-weight: 400;
@@ -25,7 +25,7 @@
   line-height: 34px;
   text-align: right;
 }
-.content__text_description {
+.content__description {
   width: 722px;
   font-family: "Inter";
   font-weight: 400;
@@ -44,13 +44,13 @@
     font-size: 45px;
     line-height: 49px;
   }
-  .content__text_subtitle {
+  .content__subtitle {
     width: 100%;
   }
-  .content__text_author {
+  .content__author {
     width: 100%;
   }
-  .content__text_description {
+  .content__description {
     width: 100%;
   }
 }
@@ -64,7 +64,7 @@
     font-size: 32px;
     line-height: 35px;
   }
-  .content__text_subtitle {
+  .content__subtitle {
     line-height: 30px;
   }
 }
