--- a/blocks/place.css
+++ b/blocks/place.css
@@ -78,12 +78,8 @@
   padding: 13px 20px;
   text-decoration: none;
   color: #ffffff;
-  background: linear-gradient(
-    to right,
-    rgba(2, 120, 254, 1),
-    rgba(0, 58, 123, 1)
-  );
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
 }
 .place__frame:hover {
   background: linear-gradient(
