--- a/blocks/place.css
+++ b/blocks/place.css
@@ -25,7 +25,7 @@
   font-weight: 900;
   margin: 0;
 }
-.place__website_div {
+.place__website {
   grid-area: artics;
   display: flex;
   flex-direction: column;
@@ -57,7 +57,7 @@
 .place__image:hover {
   opacity: 0.5;
 }
-.place__text_div {
+.place__text {
   grid-area: description;
 }
 .place__paragraph {
@@ -142,7 +142,7 @@
     font-size: 14px;
     margin: 0 16px;
   }
-  .place__text_div {
+  .place__text {
     margin: 0 16px;
   }
 }
