--- a/blocks/place.css
+++ b/blocks/place.css
@@ -70,7 +70,7 @@
 .place__paragraph:first-child {
   margin: 0;
 }
-.place__frame {
+.place__botton {
   grid-area: link;
   max-width: 356px;
   height: max-content;
@@ -81,7 +81,7 @@
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
 }
-.place__frame:hover {
+.place__botton:hover {
   background: linear-gradient(
     90deg,
     rgba(2, 120, 254, 0.25) 0%,
@@ -103,11 +103,11 @@
   .place__paragraph {
     font-size: 16px;
   }
-  .place__frame {
+  .place__botton {
     width: 355px;
   }
 }
-@media screen and (max-width: 544px) {
+@media screen and (max-width: 610px) {
   .place {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
@@ -137,7 +137,7 @@
   .place__paragraph {
     width: 100%;
   }
-  .place__frame {
+  .place__botton {
     width: auto;
     font-size: 14px;
     margin: 0 16px;
